(library
 (public_name dkml-component-staging-unixutils)
 (name dkml_component_staging_unixutils)
 (modules dkml_component_staging_unixutils)
 (libraries dkml-install.register dune-site))

(library
 (public_name dkml-component-network-unixutils)
 (name dkml_component_network_unixutils)
 (modules dkml_component_network_unixutils)
 (libraries dkml-install.register dune-site bos logs))

(library
 (public_name dkml-component-offline-unixutils)
 (name dkml_component_offline_unixutils)
 (modules dkml_component_offline_unixutils)
 (libraries dkml-install.register dune-site bos logs))

(plugin
 ; plugin name must be globally unique, and not clash with a library name
 (name dkml-plugin-staging-unixutils)
 (package dkml-component-staging-unixutils)
 (libraries dkml-component-staging-unixutils)
 (site
  (dkml-install-runner plugins)))

(plugin
 ; plugin name must be globally unique, and not clash with a library name
 (name dkml-plugin-network-unixutils)
 (package dkml-component-network-unixutils)
 (libraries dkml-component-network-unixutils)
 (site
  (dkml-install-runner plugins)))

(plugin
 ; plugin name must be globally unique, and not clash with a library name
 (name dkml-plugin-offline-unixutils)
 (package dkml-component-offline-unixutils)
 (libraries dkml-component-offline-unixutils)
 (site
  (dkml-install-runner plugins)))
