(library
 (public_name dkml-component-staging-unixutils)
 (name dkml_component_staging_unixutils)
 (modules dkml_component_staging_unixutils)
 (libraries dkml-install.register))

(library
 (public_name dkml-component-network-unixutils)
 (name dkml_component_network_unixutils)
 (modules dkml_component_network_unixutils)
 (libraries
  dkml-install.register
  dkml-component-staging-ocamlrun.api
  bos
  logs))

(library
 (public_name dkml-component-offline-unixutils)
 (name dkml_component_offline_unixutils)
 (modules dkml_component_offline_unixutils)
 (libraries
  dkml-install.register
  dkml-component-staging-ocamlrun.api
  bos
  logs))
