(executable
 (package dkml-component-staging-unixutils)
 (name windows_install)
 (public_name windows_install)
 (modes
  (byte exe))
 (libraries
  dkml-install.api
  diskuvbox
  bos
  curly
  logs.cli
  logs.fmt
  fmt.cli
  fmt.tty
  cmdliner
  sha))

(install
 (package dkml-component-staging-unixutils)
 (section share)
 (files
  (windows_install.bc as staging-files/generic/windows_install.bc)))
